Fri Oct 30 17:35:57 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DisjointSequence.inl:

          Updates to depth.

Fri Oct 30 16:17:19 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DisjointSequence.h:
        * dds/DCPS/DisjointSequence.inl:
        * dds/DCPS/DisjointSequence.cpp:

          Removed uneccessary assertions obviated by refactoring to an
          inclusive model.

Fri Oct 30 15:44:05 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DisjointSequence.h:
        * dds/DCPS/DisjointSequence.inl:

          Added depth member function to expose total number of disjoint
          values within the set.

Thu Oct 29 23:23:15 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DisjointSequence.cpp:

          Minor formatting updates.

Thu Oct 29 23:22:22 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DisjointSequence.cpp:

          Minor formatting updates.

Thu Oct 29 23:21:08 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DisjointSequence.cpp:

          Minor formatting updates.

Thu Oct 29 22:13:55 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/Definitions.h:
        * dds/DCPS/DisjointSequence.h:
        * dds/DCPS/DisjointSequence.inl:
        * dds/DCPS/DisjointSequence.cpp:

          Updated disjoint sequence to be inclusive; added missing
          inline on global operators.

Wed Oct 28 22:57:37 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/Definitions.h:
        * dds/DCPS/DisjointSequence.h:
        * dds/DCPS/DisjointSequence.inl:
        * dds/DCPS/DisjointSequence.cpp:

          Initial implementation of disjoint sequence tracking for
          forthcoming updates to wait_for_acknowledgements and
          coherent_access.

Fri Oct 23 22:40:22 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DDS_release_notes.txt:
        * README:
