@@ -1,3 +1,11 @@
+Fri Oct 30 22:09:19 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/DataReaderImpl.h:
+        * dds/DCPS/DataReaderImpl.cpp:
+
+          Added support for out of order delivery for
+          wait_for_acknowledgements.
+
 Fri Oct 30 17:35:57 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/DisjointSequence.inl:
